fix(lcv2): More info page overflow issue fix.

--- a/src/modules/Dashboard/modules/LearningCircleV2/pages/moreInfoLC/MoreInfoLC.module.css
+++ b/src/modules/Dashboard/modules/LearningCircleV2/pages/moreInfoLC/MoreInfoLC.module.css
@@ -70,7 +70,6 @@
             grid-template-columns: 1fr 1fr;
 
             .descriptionSection {
-                height: 300px;
                 .sectionTitle {
                     font-size: 1.125rem;
                     font-weight: 600;
